refactor(dto): add extra fields for better FE mapping